Update pom.xml for project

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<repositories>
+<project>
   <repository>
     <id>spigot-repo</id>
     <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
   </repository>
-</repositories>
+</project>
 
 <dependencies>
   <dependency>
