Change profile hash tag

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<project>
-  <repository>
+<profiles>
+  <profile>
     <id>spigot-repo</id>
     <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-  </repository>
-</project>
+  </profile>
+</profiles>
 
 <dependencies>
   <dependency>
