--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<project>
 <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
@@ -36,6 +37,7 @@
 </dependencies>
 
 </settings>
+</project>
 
   
 
